add GKE instructions

--- a/notebooks/01_introduction_to_docker.ipynb
+++ b/notebooks/01_introduction_to_docker.ipynb
@@ -115,47 +115,47 @@
      "text": [
       "Sending build context to Docker daemon  3.072kB\n",
       "Step 1/9 : FROM golang:1.10.1-alpine as build\n",
-      " ---> 52d894fca6d4\n",
+      " ---> 41bf3e9b9f3c\n",
       "Step 2/9 : WORKDIR /go/src/github.com/sakajunquality/hello-go-docker\n",
-      " ---> Running in 68860fc483c1\n",
-      "Removing intermediate container 68860fc483c1\n",
-      " ---> ef33b24152db\n",
+      " ---> Running in bde538b229d1\n",
+      "Removing intermediate container bde538b229d1\n",
+      " ---> d4ab11736a1c\n",
       "Step 3/9 : COPY main.go main.go\n",
-      " ---> 13ddaf3b9bcd\n",
+      " ---> f79ad2bec090\n",
       "Step 4/9 : RUN go get -d -v ./...\n",
-      " ---> Running in 66435510e41f\n",
-      "Removing intermediate container 66435510e41f\n",
-      " ---> d4646170ba2a\n",
+      " ---> Running in a4908d98b14e\n",
+      "Removing intermediate container a4908d98b14e\n",
+      " ---> 8c60232df29d\n",
       "Step 5/9 : RUN go install -v ./...\n",
-      " ---> Running in e69a1cc25bda\n",
+      " ---> Running in 90405fea99fe\n",
       "\u001b[91mgithub.com/sakajunquality/hello-go-docker\n",
-      "\u001b[0mRemoving intermediate container e69a1cc25bda\n",
-      " ---> c73c2aaae722\n",
+      "\u001b[0mRemoving intermediate container 90405fea99fe\n",
+      " ---> 4dd649354721\n",
       "Step 6/9 : FROM alpine\n",
-      " ---> 196d12cf6ab1\n",
+      " ---> 3fd9065eaf02\n",
       "Step 7/9 : RUN apk add --no-cache ca-certificates\n",
-      " ---> Running in 9a70012cdece\n",
-      "fetch http://dl-cdn.alpinelinux.org/alpine/v3.8/main/x86_64/APKINDEX.tar.gz\n",
-      "fetch http://dl-cdn.alpinelinux.org/alpine/v3.8/community/x86_64/APKINDEX.tar.gz\n",
-      "(1/1) Installing ca-certificates (20171114-r3)\n",
-      "Executing busybox-1.28.4-r1.trigger\n",
-      "Executing ca-certificates-20171114-r3.trigger\n",
-      "OK: 5 MiB in 14 packages\n",
-      "Removing intermediate container 9a70012cdece\n",
-      " ---> 5211ee2caf41\n",
+      " ---> Running in a0eaedeb4ea9\n",
+      "fetch http://dl-cdn.alpinelinux.org/alpine/v3.7/main/x86_64/APKINDEX.tar.gz\n",
+      "fetch http://dl-cdn.alpinelinux.org/alpine/v3.7/community/x86_64/APKINDEX.tar.gz\n",
+      "(1/1) Installing ca-certificates (20171114-r0)\n",
+      "Executing busybox-1.27.2-r7.trigger\n",
+      "Executing ca-certificates-20171114-r0.trigger\n",
+      "OK: 5 MiB in 12 packages\n",
+      "Removing intermediate container a0eaedeb4ea9\n",
+      " ---> bfdd172f05bf\n",
       "Step 8/9 : COPY --from=build /go/bin/hello-go-docker /usr/local/bin/hello-go-docker\n",
-      " ---> ea53cb21cc0d\n",
+      " ---> 8ced011b6973\n",
       "Step 9/9 : CMD [\"hello-go-docker\"]\n",
-      " ---> Running in f164b1c092d2\n",
-      "Removing intermediate container f164b1c092d2\n",
-      " ---> d980ccb64adb\n",
-      "Successfully built d980ccb64adb\n",
-      "Successfully tagged k8s-hands-on:latest\n"
+      " ---> Running in 43dd675797b3\n",
+      "Removing intermediate container 43dd675797b3\n",
+      " ---> bb863908f312\n",
+      "Successfully built bb863908f312\n",
+      "Successfully tagged k8s-hands-on:v1\n"
      ]
     }
    ],
    "source": [
-    "docker image build --no-cache -t k8s-hands-on ."
+    "docker image build --no-cache -t k8s-hands-on:v1 ."
    ]
   },
   {
@@ -174,12 +174,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cd6f227937f4ed36106ad1f77ce68904490ecbf6cf42c1c2c00563570922b7be\n"
+      "d6256c14c19f77b81fac74d6dcf12b2686fca5b471909a56b8edc0197cee4a49\n"
      ]
     }
    ],
    "source": [
-    "docker container run -d --rm -p 8888:8888 --name k8s-hands-on k8s-hands-on"
+    "docker container run -d --rm -p 8888:8888 --name k8s-hands-on k8s-hands-on:v1"
    ]
   },
   {
@@ -206,8 +206,8 @@
      "output_type": "stream",
      "text": [
       "CONTAINER ID        IMAGE                         COMMAND                  CREATED             STATUS              PORTS                              NAMES\n",
-      "cd6f227937f4        k8s-hands-on                  \"hello-go-docker\"        2 minutes ago       Up 2 minutes        0.0.0.0:8888->8888/tcp             k8s-hands-on\n",
-      "0db2564ff1bf        sakajunquality/k8s-hands-on   \"dockerd-entrypoint.…\"   25 minutes ago      Up 25 minutes       2375/tcp, 0.0.0.0:8080->8080/tcp   blissful_easley\n"
+      "d6256c14c19f        k8s-hands-on:v1               \"hello-go-docker\"        10 seconds ago      Up 8 seconds        0.0.0.0:8888->8888/tcp             k8s-hands-on\n",
+      "60e18ba7b362        sakajunquality/k8s-hands-on   \"dockerd-entrypoint.…\"   2 hours ago         Up 2 hours          2375/tcp, 0.0.0.0:8080->8080/tcp   relaxed_brattain\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "CONTAINER ID        IMAGE                         COMMAND                  CREATED             STATUS              PORTS                              NAMES\n",
-      "0db2564ff1bf        sakajunquality/k8s-hands-on   \"dockerd-entrypoint.…\"   26 minutes ago      Up 26 minutes       2375/tcp, 0.0.0.0:8080->8080/tcp   blissful_easley\n"
+      "60e18ba7b362        sakajunquality/k8s-hands-on   \"dockerd-entrypoint.…\"   2 hours ago         Up 2 hours          2375/tcp, 0.0.0.0:8080->8080/tcp   relaxed_brattain\n"
      ]
     }
    ],
